--- a/openidl-ui-workspace/projects/openidl-carrier-ui/src/app/view-report/view-report.component.html
+++ b/openidl-ui-workspace/projects/openidl-carrier-ui/src/app/view-report/view-report.component.html
@@ -1,5 +1,5 @@
 <app-header [selected]="selected"></app-header>
-<div class="col-sm-10 col-sm-offset-1" style="margin-top: 20px">
+<div class="breadcrumb">
 	<a class="back-link" [routerLink]="['/datacallList']">Data Calls</a> &nbsp;
 	/ &nbsp;
 	<a class="back-link" [routerLink]="['/viewIssued']">Data Call Details</a>
