--- a/openidl-ui-workspace/projects/openidl-carrier-ui/src/styles/styles.scss
+++ b/openidl-ui-workspace/projects/openidl-carrier-ui/src/styles/styles.scss
@@ -1,3 +1,5 @@
+@import 'variables';
+
 html,
 body {
 	height: 100%;
@@ -59,5 +61,12 @@ body {
 	.data-form {
 		margin-top: 1rem;
 		padding: 1rem;
+	}
+}
+
+.breadcrumb {
+	padding-bottom: 1rem;
+	a {
+		color: $primary;
 	}
 }
