--- a/openidl-ui-workspace/projects/openidl-common-ui/src/lib/components/dialogs/dialog-forum.component/dialog-forum.component.html
+++ b/openidl-ui-workspace/projects/openidl-common-ui/src/lib/components/dialogs/dialog-forum.component/dialog-forum.component.html
@@ -1,15 +1,17 @@
 <app-base-dialog [title]="data.title" [type]="data.type"></app-base-dialog>
 <mat-dialog-content class="mat-typography">
-	{{ data.message }}
+	<mat-form-field class="full-width" appearance="outline">
+		<mat-label>Forum URL</mat-label>
+		<input
+			matInput
+			type="url"
+			placeholder="Enter Forum URL"
+			[(ngModel)]="data.url"
+		/>
+	</mat-form-field>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
-	<button
-		mat-flat-button
-		(click)="onClickUpdate()"
-		cdkFocusInitial
-		color="primary"
-	>
+	<button mat-flat-button [mat-dialog-close]="data.url" color="primary">
 		Update Forum URL
 	</button>
-	<button mat-flat-button mat-dialog-close>Cancel</button>
 </mat-dialog-actions>
