--- a/openidl-ui-workspace/projects/openidl-common-ui/src/lib/components/report-table/report-table.component.html
+++ b/openidl-ui-workspace/projects/openidl-common-ui/src/lib/components/report-table/report-table.component.html
@@ -1,179 +1,158 @@
-<div *ngIf="!isSpinner" class="report-table">
-	<table class="table table-bordered table-hover">
-		<thead>
-			<tr>
-				<th *ngIf="role === 'regulator'" style="width: 5%"></th>
-				<th style="text-align: right; width: 5%; padding-right: 30px">
-					Version
-				</th>
-				<th style="width: 30%">Date and Time</th>
-				<th style="width: 10%">Status</th>
-				<th style="width: 30%" *ngIf="isShowUrl">Report URL</th>
-				<th style="width: 18%">Report Hash</th>
-				<th style="width: 2%"></th>
-			</tr>
-		</thead>
-		<tbody *ngIf="reportList && reportList.length > 0">
-			<tr *ngFor="let report of reportList; let i = index">
-				<td
-					*ngIf="role === 'regulator' && isJurisdiction"
-					style="width: 5%"
-				>
-					<input
-						*ngIf="
-							(!isAccepted &&
-								!isPublished &&
-								report.status.toLowerCase() === 'candidate') ||
-							(isAccepted &&
-								report.status.toLowerCase() === 'accepted')
-						"
-						type="radio"
-						name="report"
-						[value]="report"
-						[checked]="
-							(isAccepted &&
-								report.status.toLowerCase() === 'accepted') ||
-							isReportSelected
-						"
-						(change)="getSelectedReport(report)"
-					/>
-				</td>
-				<td style="text-align: right; padding-right: 30px; width: 5%">
-					{{ report.reportVersion }}
-				</td>
-				<td style="width: 30%">{{ report.updatedTs }}</td>
-				<td style="text-transform: capitalize; width: 10%">
-					{{ report.status }}
-				</td>
-				<td *ngIf="isShowUrl" class="report-link" style="width: 30%">
-					<span style="display: block; position: relative">
-						<a
-							*ngIf="
-								this.role.toLowerCase() === 'regulator' ||
-								this.role.toLowerCase() === 'statagent' ||
-								!(
-									this.role.toLowerCase() === 'carrier' &&
-									(report.status.toLowerCase() ===
-										'accepted' ||
-										report.status.toLowerCase() ===
-											'candidate')
-								)
-							"
-							class="truncate-url"
-							href="javascript:void(0);"
-							(click)="openURL(report.url)"
-							[tooltip]="report.url"
-							>{{ report.url }}</a
-						>
-					</span>
-					<!-- <i class='glyphicon glyphicon-copy'></i> -->
-				</td>
-				<td style="width: 18%">
-					<span style="display: block; position: relative">
-						<span class="truncate-hash" [tooltip]="report.hash">{{
-							report.hash
-						}}</span>
-					</span>
-				</td>
-				<td style="width: 2%">
-					<div
-						id="i"
-						class="glyphicon glyphicon-option-vertical reset-btn"
-						(click)="toggleCopyBtn(i)"
-					>
-						<div
-							*ngIf="isCopyBtn && copyIndex === i"
-							class="reset-container"
-						>
-							<div class="copyLink">
-								<button
-									*ngIf="!isHashCopied"
-									ngxClipboard
-									[cbContent]="report.hash"
-									(click)="
-										copyToClipboard(
-											'Copied',
-											'hash',
-											$event
-										)
-									"
-								>
-									{{ copyHashText }}
-								</button>
-								<span *ngIf="isHashCopied"
-									><i
-										class="glyphicon glyphicon-ok-circle"
-										style="margin-right: 8px"
-									></i
-									>{{ copyHashText }}</span
-								>
-							</div>
-							<div class="copyLink">
-								<button
-									*ngIf="!isURLCopied"
-									ngxClipboard
-									[cbContent]="report.url"
-									(click)="
-										copyToClipboard('Copied', 'URL', $event)
-									"
-								>
-									{{ copyURLText }}
-								</button>
-								<span *ngIf="isURLCopied"
-									><i
-										class="glyphicon glyphicon-ok-circle"
-										style="margin-right: 8px"
-									></i
-									>{{ copyURLText }}</span
-								>
-							</div>
-						</div>
-					</div>
-				</td>
-			</tr>
-		</tbody>
-		<tbody *ngIf="!(reportList && reportList.length > 0)">
-			<tr>
-				<td colspan="6" style="text-align: center; font-weight: bold">
-					No reports available.
-				</td>
-			</tr>
-		</tbody>
-	</table>
-	<div
-		*ngIf="role === 'regulator' && isJurisdiction"
-		class="col-sm-12 no-row-padding"
+<div class="data-table" *ngIf="!isSpinner">
+	<table
+		mat-table
+		class="width-table"
+		[dataSource]="reportList"
+		*ngIf="reportList && reportList.length > 0"
 	>
+		<!-- Checkbox Column -->
+		<ng-container matColumnDef="select" *ngIf="role === 'regulator'">
+			<th mat-header-cell *matHeaderCellDef></th>
+			<td mat-cell *matCellDef="let row">
+				<mat-radio-button
+					*ngIf="
+						(!isAccepted &&
+							!isPublished &&
+							row.status.toLowerCase() === 'candidate') ||
+						(isAccepted && row.status.toLowerCase() === 'accepted')
+					"
+					name="report-selector"
+					color="primary"
+					[checked]="
+						(isAccepted &&
+							row.status.toLowerCase() === 'accepted') ||
+						isReportSelected
+					"
+					(click)="$event.stopPropagation(); getSelectedReport(row)"
+					[aria-label]="'report version ' + row.reportVersion"
+				>
+				</mat-radio-button>
+			</td>
+		</ng-container>
+
+		<!-- ReportVersion Column -->
+		<ng-container matColumnDef="reportVersion">
+			<th mat-header-cell *matHeaderCellDef>Version</th>
+			<td mat-cell *matCellDef="let row">{{ row.reportVersion }}</td>
+		</ng-container>
+
+		<!-- Date and Time Column -->
+		<ng-container matColumnDef="updatedTs">
+			<th mat-header-cell *matHeaderCellDef>Date and Time</th>
+			<td mat-cell *matCellDef="let row">
+				{{ row.updatedTs }}
+			</td>
+		</ng-container>
+
+		<!-- Status Column -->
+		<ng-container matColumnDef="status">
+			<th mat-header-cell *matHeaderCellDef>Status</th>
+			<td mat-cell *matCellDef="let row" class="col-status">
+				{{ row.status }}
+			</td>
+		</ng-container>
+
+		<!-- Report URL Column -->
+		<ng-container matColumnDef="url" *ngIf="isShowUrl">
+			<th mat-header-cell *matHeaderCellDef>Report URL</th>
+			<td mat-cell *matCellDef="let row" class="row-icon">
+				<a
+					class="report-link text-wrap"
+					[matTooltip]="row.url"
+					matTooltipPosition="above"
+					href="javascript:void(0);"
+					(click)="openURL(row.url)"
+					>{{ row.url }}</a
+				>
+			</td>
+		</ng-container>
+
+		<!-- Report Hash Column -->
+		<ng-container matColumnDef="hash">
+			<th mat-header-cell *matHeaderCellDef>Report Hash</th>
+			<td mat-cell *matCellDef="let row" class="row-icon">
+				<span
+					[matTooltip]="row.hash"
+					matTooltipPosition="above"
+					class="text-wrap"
+				>
+					{{ row.hash }}
+				</span>
+			</td>
+		</ng-container>
+
+		<!-- Action Column -->
+		<ng-container matColumnDef="action">
+			<th mat-header-cell *matHeaderCellDef class="col-action"></th>
+			<td mat-cell *matCellDef="let row">
+				<button
+					mat-icon-button
+					[matMenuTriggerFor]="menu"
+					title="more menu"
+				>
+					<mat-icon>more_vert</mat-icon>
+				</button>
+				<mat-menu #menu="matMenu">
+					<button
+						mat-menu-item
+						(click)="copyToClipboard(row.url, 'URL', $event)"
+					>
+						Copy Report URL
+					</button>
+					<button
+						mat-menu-item
+						(click)="copyToClipboard(row.hash, 'hash', $event)"
+					>
+						Copy Report Hash
+					</button>
+				</mat-menu>
+			</td>
+		</ng-container>
+
+		<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+		<tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+
+		<tr class="mat-row" *matNoDataRow>
+			<td class="mat-cell" colspan="9999">No reports available.</td>
+		</tr>
+	</table>
+
+	<div class="button-row" *ngIf="role === 'regulator' && isJurisdiction">
 		<button
+			mat-stroked-button
 			*ngIf="!isAccepted && !isPublished"
-			class="btn-primary pull-right"
-			type="button"
-			(click)="submitReport('acceptAndPublishReport')"
-			style="padding: 12px 20px"
+			color="primary"
+			(click)="submitReport('acceptReport')"
 			[disabled]="isDisabled"
 		>
-			Accept and Publish
+			<mat-icon>done_all</mat-icon>
+			Accept
 		</button>
 		<button
+			mat-flat-button
 			*ngIf="isAccepted"
-			class="btn-primary pull-right"
-			type="button"
+			color="primary"
 			(click)="submitReport('publishReport')"
-			style="text-transform: capitalize; padding: 12px 20px"
 			[disabled]="!isAccepted"
 		>
+			<mat-icon>publish</mat-icon>
 			Publish
 		</button>
 		<button
+			mat-flat-button
 			*ngIf="!isAccepted && !isPublished"
-			class="btn-secondary pull-right"
-			(click)="submitReport('acceptReport')"
-			style="text-transform: capitalize; padding: 12px 20px"
+			color="primary"
+			(click)="submitReport('acceptAndPublishReport')"
 			[disabled]="isDisabled"
 		>
-			Accept
+			<mat-icon>published_with_changes</mat-icon>
+			Accept and Publish
 		</button>
 	</div>
 </div>
 
-<app-spinner *ngIf="isSpinner"></app-spinner>
+<div class="data-table spinner-container" *ngIf="isSpinner">
+	<div class="spinner width-table"></div>
+</div>
+
+<!-- <app-spinner *ngIf="isSpinner"></app-spinner> -->
