--- a/openidl-ui-workspace/projects/openidl-common-ui/src/lib/components/update-form/update-form.component.scss
+++ b/openidl-ui-workspace/projects/openidl-common-ui/src/lib/components/update-form/update-form.component.scss
@@ -91,5 +91,30 @@
 		.mr-1 {
 			margin-right: 1rem;
 		}
+
+		.count-icon {
+			top: 6px;
+		}
+
+		.btn-org {
+			margin-left: 1rem;
+		}
+
+		.mat-spin {
+			display: inline;
+		}
+
+		.text-wrap {
+			max-width: 600px;
+			text-overflow: ellipsis;
+			white-space: nowrap;
+			overflow: hidden;
+		}
+
+		.record-time {
+			font-size: 18px;
+			top: 5px;
+			position: relative;
+		}
 	}
 }
