--- a/openidl-ui-workspace/projects/openidl-ui/src/app/view-report/view-report.component.html
+++ b/openidl-ui-workspace/projects/openidl-ui/src/app/view-report/view-report.component.html
@@ -1,10 +1,32 @@
-<app-header [selected]='selected'></app-header>
-<div class="col-sm-10 col-sm-offset-1" style="margin-top:20px;">
-  <a class='back-link' [routerLink]='["/datacallList"]'>Data Calls</a> &nbsp; / &nbsp;
-  <a class='back-link' [routerLink]='["/viewIssued"]'>Data Call Details</a> &nbsp; / &nbsp;
-  <a class='back-link' style='text-decoration: none;' href='javascript:(void);'>Data Call Reports</a>
-  </div>
-<div class="col-sm-10 col-sm-offset-1" style="padding:25px;background-color:#fff;margin-top:20px;">
-  <h2 style='padding-left:15px; font-weight:bold;'>Report</h2>
-  <app-report-table></app-report-table>
+<app-header [selected]="selected"></app-header>
+<div class="container">
+	<h1 class="header-with-icon">
+		<mat-icon color="primary">analytics</mat-icon>
+		<span>View Report</span>
+	</h1>
+	<div class="breadcrumb">
+		<a class="back-link" [routerLink]="['/datacallList']">Data Calls</a>
+		&nbsp; / &nbsp;
+		<a class="back-link" [routerLink]="['/viewIssued']"
+			>Data Call Details</a
+		>
+		&nbsp; / &nbsp;
+		<a
+			class="back-link"
+			style="text-decoration: none"
+			href="javascript:(void);"
+			>Data Call Reports</a
+		>
+	</div>
+	<div>
+		<mat-card>
+			<mat-card-header>
+				<mat-card-title>Report</mat-card-title>
+			</mat-card-header>
+			<mat-divider></mat-divider>
+			<mat-card-content>
+				<app-report-table></app-report-table>
+			</mat-card-content>
+		</mat-card>
+	</div>
 </div>
