--- a/openidl-ui-workspace/projects/openidl-common-ui/src/lib/components/search/search.component.html
+++ b/openidl-ui-workspace/projects/openidl-common-ui/src/lib/components/search/search.component.html
@@ -1,6 +1,6 @@
 <div class="search-component">
 	<mat-form-field appearance="outline" class="full-width">
-		<mat-label>Search for call data</mat-label>
+		<mat-label>Search for data call</mat-label>
 		<mat-icon matPrefix color="primary">search</mat-icon>
 		<input
 			matInput
