#9 bug fix, No action has been observed when clicked on Yes (or) No buttons in the warning  pop-up that is displayed when clicked  on 'Logout' after entering some text in the input fields

--- a/openidl-ui-workspace/projects/openidl-common-ui/src/lib/components/report-table/report-table.component.html
+++ b/openidl-ui-workspace/projects/openidl-common-ui/src/lib/components/report-table/report-table.component.html
@@ -151,8 +151,8 @@
 	</div>
 </div>
 
-<div class="data-table spinner-container" *ngIf="isSpinner">
-	<div class="spinner width-table"></div>
+<div class="data-table" *ngIf="isSpinner">
+	<div class="spinner-container width-table">
+		<mat-spinner diameter="40" class="spin"></mat-spinner>
+	</div>
 </div>
-
-<!-- <app-spinner *ngIf="isSpinner"></app-spinner> -->
