--- a/openidl-ui-workspace/projects/openidl-common-ui/src/lib/components/report-table/report-table.component.scss
+++ b/openidl-ui-workspace/projects/openidl-common-ui/src/lib/components/report-table/report-table.component.scss
@@ -53,10 +53,14 @@
 	}
 
 	.spinner-container {
-		height: 3rem;
-	}
-	.spinner {
+		height: 5rem;
 		position: relative;
+		text-align: center;
+
+		.spin {
+			display: inline;
+			top: 40%;
+		}
 	}
 }
 
