--- a/openidl-ui-workspace/projects/openidl-common-ui/src/lib/components/dialogs/dialog-confirmation.component/dialog-confirmation.component.html
+++ b/openidl-ui-workspace/projects/openidl-common-ui/src/lib/components/dialogs/dialog-confirmation.component/dialog-confirmation.component.html
@@ -3,5 +3,6 @@
 	{{ data.message }}
 </mat-dialog-content>
 <mat-dialog-actions align="end">
+	<button mat-stroked-button mat-dialog-close color="primary">No</button>
 	<button mat-flat-button mat-dialog-close="yes" color="primary">Yes</button>
 </mat-dialog-actions>
