#9 sorting was not working after adding ngif on table

--- a/openidl-ui-workspace/projects/openidl-common-ui/src/lib/components/table/table.component.html
+++ b/openidl-ui-workspace/projects/openidl-common-ui/src/lib/components/table/table.component.html
@@ -1,12 +1,5 @@
-<div class="data-table" *ngIf="!isSpinner">
-	<table
-		mat-table
-		class="width-table"
-		matSort
-		[dataSource]="dataSource"
-		matSortActive="updatedTs"
-		matSortDirection="desc"
-	>
+<div class="data-table" [hidden]="isSpinner">
+	<table mat-table class="width-table" matSort [dataSource]="dataSource">
 		<!-- Name Column -->
 		<ng-container matColumnDef="name">
 			<th
