#9 fixed inconsistent naming convention

--- a/openidl-ui-workspace/projects/openidl-common-ui/src/lib/components/form/form.component.html
+++ b/openidl-ui-workspace/projects/openidl-common-ui/src/lib/components/form/form.component.html
@@ -59,7 +59,7 @@
 				<div class="row">
 					<div class="col">
 						<mat-form-field appearance="outline" class="full-width">
-							<mat-label>Premium Date Range</mat-label>
+							<mat-label>Premium Dates</mat-label>
 							<mat-date-range-input
 								[rangePicker]="premiumDatePicker"
 							>
