--- a/openidl-ui-workspace/projects/openidl-common-ui/src/lib/components/update-form/update-form.component.html
+++ b/openidl-ui-workspace/projects/openidl-common-ui/src/lib/components/update-form/update-form.component.html
@@ -131,7 +131,7 @@
 									appearance="outline"
 									class="full-width"
 								>
-									<mat-label>Premium Date Range</mat-label>
+									<mat-label>Premium Dates</mat-label>
 									<mat-date-range-input
 										[rangePicker]="premiumDatePicker"
 									>
