--- a/openidl-ui-workspace/projects/openidl-common-ui/src/lib/components/update-form/update-form.component.html
+++ b/openidl-ui-workspace/projects/openidl-common-ui/src/lib/components/update-form/update-form.component.html
@@ -73,24 +73,18 @@
 									/>
 								</mat-form-field>
 							</div>
-
 							<div class="col">
 								<mat-form-field
-									appearance="outline"
 									class="full-width"
+									appearance="outline"
 								>
-									<mat-label>Line of Business</mat-label>
-									<mat-select
-										placeholder="Select Line of Business"
-										formControlName="lineOfBusiness"
-										[class.spinner]="LOBs.length === 0"
-									>
-										<mat-option
-											[value]="lob.value"
-											*ngFor="let lob of LOBs"
-											>{{ lob.value }}</mat-option
-										>
-									</mat-select>
+									<mat-label>Jurisdiction</mat-label>
+									<input
+										readonly
+										matInput
+										placeholder="Enter Jurisdiction"
+										formControlName="jurisdiction"
+									/>
 								</mat-form-field>
 							</div>
 						</div>
@@ -111,16 +105,21 @@
 							</div>
 							<div class="col">
 								<mat-form-field
-									class="full-width"
 									appearance="outline"
+									class="full-width"
 								>
-									<mat-label>Jurisdiction</mat-label>
-									<input
-										readonly
-										matInput
-										placeholder="Enter Jurisdiction"
-										formControlName="jurisdiction"
-									/>
+									<mat-label>Line of Business</mat-label>
+									<mat-select
+										placeholder="Select Line of Business"
+										formControlName="lineOfBusiness"
+										[class.spinner]="LOBs.length === 0"
+									>
+										<mat-option
+											[value]="lob.value"
+											*ngFor="let lob of LOBs"
+											>{{ lob.value }}</mat-option
+										>
+									</mat-select>
 								</mat-form-field>
 							</div>
 						</div>
@@ -177,7 +176,7 @@
 									appearance="outline"
 									class="full-width"
 								>
-									<mat-label>Loss Date Range</mat-label>
+									<mat-label>Loss Dates</mat-label>
 									<mat-date-range-input
 										[rangePicker]="lossDatePicker"
 									>
