fixed org logo size issue

--- a/openidl-ui-workspace/projects/openidl-carrier-ui/src/app/header/header.component.html
+++ b/openidl-ui-workspace/projects/openidl-carrier-ui/src/app/header/header.component.html
@@ -6,7 +6,7 @@
 			class="logo"
 			alt="Open IDL Logo" />
 		<span class="divider"></span>
-		<img [src]="orgLogo"
+		<img [src]="orgLogo" class="logo"
 	/></span>
 	<span class="spacer"></span>
 	<button
