remove date conversion for transaction-month

--- a/openidl-ui-workspace/projects/openidl-common-ui/src/lib/components/datacalls-issued/datacalls-issued.component.html
+++ b/openidl-ui-workspace/projects/openidl-common-ui/src/lib/components/datacalls-issued/datacalls-issued.component.html
@@ -150,7 +150,7 @@
 					<div class="col readonly">
 						<h4>Transaction Month</h4>
 						<p>
-							<span>{{ getTransactionMonth() }}</span>
+							<span>{{ draft.transactionMonth ? draft.transactionMonth : '-NA-' }}</span>
 						</p>
 					</div>
 				</div>
