--- a/openidl-ui-workspace/projects/openidl-common-ui/src/lib/components/table/table.component.html
+++ b/openidl-ui-workspace/projects/openidl-common-ui/src/lib/components/table/table.component.html
@@ -24,7 +24,7 @@
 				Transaction Month
 			</th>
 			<td mat-cell *matCellDef="let row">
-				{{ getTransactionMonth(row) }}
+				{{ row.transactionMonth ? row.transactionMonth : '-NA-' }}
 			</td>
 		</ng-container>
 
