rename date-format selector
Signed-off-by: T470P-09\surendra.sirangu <surendra.sirangu@itpeoplecorp.com>
Signed-off-by: Lyubomir Bandrov <lyubomir.bandrov@senofi.ca>

--- a/openidl-ui-workspace/projects/openidl-common-ui/src/lib/components/update-form/update-form.component.html
+++ b/openidl-ui-workspace/projects/openidl-common-ui/src/lib/components/update-form/update-form.component.html
@@ -231,7 +231,7 @@
 								</mat-slide-toggle>
 							</div>
 							<div class="col">
-								<mat-form-field appearance="outline" class="full-width" dateFormat>							
+								<mat-form-field appearance="outline" class="full-width" dateFormat1>							
 									<mat-label>Transaction Month</mat-label>
 									<input matInput [matDatepicker]="transactionMonthPicker" placeholder="Month and Year" formControlName="transactionMonth">
 									<mat-datepicker-toggle matSuffix [for]="transactionMonthPicker"></mat-datepicker-toggle>
