--- a/openidl-ui-workspace/projects/openidl-carrier-ui/src/app/login/login.component.html
+++ b/openidl-ui-workspace/projects/openidl-carrier-ui/src/app/login/login.component.html
@@ -3,9 +3,7 @@
 		<mat-grid-tile></mat-grid-tile>
 		<mat-grid-tile>
 			<form
-				[formGroup]="userForm"
-				#formDirective="ngForm"
-				(ngSubmit)="login(userForm.value, formDirective)"
+				(ngSubmit)="login()"
 				novalidate
 			>
 				<mat-card class="login-card">
@@ -20,62 +18,6 @@
 
 					<mat-card-content class="content">
 						<p class="heading">Sign In</p>
-						<div class="row">
-							<div class="col">
-								<mat-form-field
-									class="full-width"
-									appearance="outline"
-								>
-									<mat-icon matPrefix color="primary"
-										>person_filled</mat-icon
-									>
-									<mat-label>Username</mat-label>
-									<input
-										matInput
-										name="username"
-										formControlName="username"
-									/>
-									<mat-error
-										*ngIf="
-											userForm.controls[
-												'username'
-											].hasError('required')
-										"
-									>
-										Username is <strong>required</strong>
-									</mat-error>
-								</mat-form-field>
-							</div>
-						</div>
-						<div class="row">
-							<div class="col">
-								<mat-form-field
-									class="full-width"
-									appearance="outline"
-								>
-									<mat-icon matPrefix color="primary"
-										>password_filled</mat-icon
-									>
-									<mat-label>Password</mat-label>
-									<input
-										matInput
-										type="password"
-										name="password"
-										placeholder="Password"
-										formControlName="password"
-									/>
-									<mat-error
-										*ngIf="
-											userForm.controls[
-												'password'
-											].hasError('required')
-										"
-									>
-										Password is <strong>required</strong>
-									</mat-error>
-								</mat-form-field>
-							</div>
-						</div>
 						<div class="row">
 							<div class="col center">
 								<button
