IDL-89 Do not show orgLogo when there isn't logo available on the specified address
Signed-off-by: Lyubomir Bandrov <lyubomir.bandrov@senofi.ca>

--- a/openidl-ui-workspace/projects/openidl-carrier-ui/src/app/header/header.component.html
+++ b/openidl-ui-workspace/projects/openidl-carrier-ui/src/app/header/header.component.html
@@ -1,39 +1,39 @@
 <mat-toolbar class="header">
 	<span
-		><img
-			src="../../assets/images/openidl-header-logo.png"
-			(click)="goHome()"
-			class="logo"
-			alt="Open IDL Logo" />
+  ><img
+    src="../../assets/images/openidl-header-logo.png"
+    (click)="goHome()"
+    class="logo"
+    alt="Open IDL Logo"/>
 		<span class="divider"></span>
-		<img [src]="roleIcon" class="logo" />
+		<img [src]="roleIcon" class="logo"/>
 		<span class="divider"></span>
-		<img [src]="orgLogo" class="logo"
-	/></span>
-	<span class="spacer"></span>
-	<button
-		mat-button
-		color="primary"
-		[ngClass]="{ active: selected === 0 }"
-		[routerLink]="['/datacallList']"
-		(click)="selected = 0"
-	>
-		<mat-icon>list_alt</mat-icon>
-		Data Calls
-	</button>
-	<button
-		mat-button
-		color="primary"
-		[ngClass]="{ active: selected === 1 }"
-		*ngIf="appConst.shouldCreateDatacall"
-		[routerLink]="['/createDatacall']"
-		(click)="selected = 1"
-	>
-		<mat-icon>add_box</mat-icon>
-		New Data Call
-	</button>
-	<button mat-button color="primary" (click)="logout()">
-		<mat-icon>logout</mat-icon>
-		Log Out
-	</button>
+		<img *ngIf="orgLogoError" [src]="orgLogo" class="logo" (error)="onImageError($event)"
+    /></span>
+  <span class="spacer"></span>
+  <button
+    mat-button
+    color="primary"
+    [ngClass]="{ active: selected === 0 }"
+    [routerLink]="['/datacallList']"
+    (click)="selected = 0"
+  >
+    <mat-icon>list_alt</mat-icon>
+    Data Calls
+  </button>
+  <button
+    mat-button
+    color="primary"
+    [ngClass]="{ active: selected === 1 }"
+    *ngIf="appConst.shouldCreateDatacall"
+    [routerLink]="['/createDatacall']"
+    (click)="selected = 1"
+  >
+    <mat-icon>add_box</mat-icon>
+    New Data Call
+  </button>
+  <button mat-button color="primary" (click)="logout()">
+    <mat-icon>logout</mat-icon>
+    Log Out
+  </button>
 </mat-toolbar>
