IDL-89 Fix datacall template reading username from wrong source
Signed-off-by: Lyubomir Bandrov <lyubomir.bandrov@senofi.ca>

--- a/openidl-ui-workspace/projects/openidl-common-ui/src/lib/components/datacalls-issued/datacalls-issued.component.html
+++ b/openidl-ui-workspace/projects/openidl-common-ui/src/lib/components/datacalls-issued/datacalls-issued.component.html
@@ -377,7 +377,7 @@
 	<app-update-report
 		*ngIf="isStatAgent"
 		[datacall]="draft"
-		[username]="this.loginResult.username"
+		[username]="this.username"
 		(updateReportEvent)="updateReport($event)"
 	></app-update-report>
 </div>
